--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_maps_flutter: ^2.2.3
-  form_builder_extra_fields:
-    git:
-      url: https://github.com/rvndsngwn/form_builder_extra_fields.git
-  flutter_typeahead: ^4.3.3
+  google_maps_flutter: ^2.2.5
+  form_builder_extra_fields: ^8.5.0
+    # git:
+    #   url: https://github.com/rvndsngwn/form_builder_extra_fields.git
+  flutter_typeahead: ^4.3.7
   google_maps_webservice: ^0.0.20-nullsafety.5
-  google_maps_flutter_web: ^0.4.0+5
+  google_maps_flutter_web: ^0.4.0+7
   geolocator: ^9.0.2
   http: ^0.13.5
-  logger: ^1.1.0
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
